# ro-Control

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README.tr.md  SECURITY.md  build.rs  gitignore  kullanıcıraporu.md  rust-toolchain.toml  yapilacak.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  rpm-deploy.yml  security.yml
data/: io.github.AcikKaynakGelistirmeToplulugu.ro-control.desktop  io.github.AcikKaynakGelistirmeToplulugu.ro-control.gschema.xml  io.github.AcikKaynakGelistirmeToplulugu.ro-control.metainfo.xml
data/polkit/: io.github.AcikKaynakGelistirmeToplulugu.ro-control.policy
docs/: ARCHITECTURE.md  BUILDING.md  DESIGN_BRIEF.md  FEDORA.md  QML_IMPLEMENTATION.md  QT6_MIGRATION_PLAN.md  VERSIONS.md
i18n/: ro-control_de.ts  ro-control_en.ts  ro-control_es.ts  ro-control_tr.ts
linux-gpu-manager/: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
linux-gpu-manager/build_amd64/DEBIAN/: control
linux-gpu-manager/build_amd64/opt/driver-pilot/data/: driver-pilot-root-task
linux-gpu-manager/build_amd64/opt/driver-pilot/src/core/: installer.py
linux-gpu-manager/build_amd64/opt/driver-pilot/src/ui/: performance_view.py
linux-gpu-manager/build_amd64/usr/share/doc/driver-pilot/: copyright
linux-gpu-manager/build_arm64/DEBIAN/: control  postinst
linux-gpu-manager/build_arm64/opt/driver-pilot/data/: driver-pilot.desktop
linux-gpu-manager/build_arm64/opt/driver-pilot/src/: config.py  main.py
linux-gpu-manager/build_arm64/opt/driver-pilot/src/core/: detector.py  distro_mgr.py  installer.py
linux-gpu-manager/build_arm64/opt/driver-pilot/src/ui/: main_window.py
linux-gpu-manager/build_arm64/opt/driver-pilot/src/ui/assets/: style.css
linux-gpu-manager/build_arm64/opt/driver-pilot/src/utils/: logger.py  reporter.py
linux-gpu-manager/build_arm64/usr/share/doc/driver-pilot/: copyright
linux-gpu-manager/data/: driver-pilot.metainfo.xml
linux-gpu-manager/src/: config.py
linux-gpu-manager/src/core/: detector.py  repo_manager.py  tweaks.py
linux-gpu-manager/src/ui/: main_window.py  performance_view.py
linux-gpu-manager/src/ui/assets/: style.css
linux-gpu-manager/src/utils/: command_runner.py  logger.py  reporter.py  translator.py
linux-gpu-manager/tests/: test_detector.py
linux-gpu-manager/tools/: build_deb.py  build_docker.sh
packaging/flatpak/: io.github.AcikKaynakGelistirmeToplulugu.ro-control.yml
packaging/rpm/: ro-control.spec
po/: LINGUAS  POTFILES.in
scripts/: dev-watch.sh  ro-control-root-task
src/: bridge.rs  config.rs  main.cpp  main.rs
src/backend/monitor/: cpumonitor.cpp  gpumonitor.cpp  rammonitor.cpp
src/backend/nvidia/: detector.cpp  detector.h  installer.cpp  updater.cpp  updater.h
src/backend/system/: commandrunner.cpp  languagemanager.cpp  languagemanager.h  systeminfoprovider.cpp
src/cli/: cli.cpp  cli.h
src/core/: detector.rs  installer.rs  mod.rs  tweaks.py  tweaks.rs  updater.rs
src/qml/: Main.qml  Theme.qml
src/qml/components/: ActionCard.qml  CustomProgressBar.qml  GradientButton.qml  InfoBadge.qml  SectionPanel.qml  SidebarMenu.qml  StatCard.qml  StatRow.qml  StatusBanner.qml  StatusBar.qml  StepItem.qml  VersionRow.qml  WarningBanner.qml  qmldir
src/qml/pages/: DriverPage.qml  ExpertPage.qml  InstallPage.qml  MonitorPage.qml  PerfPage.qml  ProgressPage.qml  SettingsPage.qml
src/utils/: command.rs  dependency_manager.py  i18n.rs  logger.rs  mod.rs  version.rs
tests/: CMakeLists.txt  test_detector.cpp  test_driver_page.cpp  test_monitor.cpp  test_system_integration.cpp  test_updater.cpp
tests/macos_qt/: ro_control_qt.py  run_simulation.py
tests/simulation/: app.js  index.html  ro_control_native.py  run_native.sh  style.css
